# mp4tomp3converter

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MP4toMP3converter-SPEC.md  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/install-ndk/: action.yml
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
app/src/androidTest/java/io/github/entewurzelauskuh/mp4tomp3/: EndToEndConversionTest.kt
app/src/androidTest/java/io/github/entewurzelauskuh/mp4tomp3/engine/: MediaCodecLameConverterTest.kt
app/src/androidTest/java/io/github/entewurzelauskuh/mp4tomp3/output/: MediaStoreSinkTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  config.h  lame_jni.c
app/src/main/java/io/github/entewurzelauskuh/mp4tomp3/: App.kt  AppContainer.kt
app/src/main/java/io/github/entewurzelauskuh/mp4tomp3/engine/: AudioConverter.kt  MediaCodecLameConverter.kt  ProgressThrottler.kt
app/src/main/java/io/github/entewurzelauskuh/mp4tomp3/jobs/: CancelReceiver.kt  ConversionDependencies.kt  ConversionJob.kt  ConversionOptions.kt  ConversionService.kt  FailureReason.kt  JobRepository.kt  Notifications.kt  QueueDrainer.kt
app/src/main/java/io/github/entewurzelauskuh/mp4tomp3/output/: FileNaming.kt  MediaStoreSink.kt  OutputFolderUnavailableException.kt  OutputSink.kt  (+2 more)
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/io/github/entewurzelauskuh/mp4tomp3/: ScaffoldSmokeTest.kt
docs/: ARCHITECTURE.md  DECISIONS.md  RELEASING.md  ROADMAP.md  TESTING.md
gradle/: libs.versions.toml
scripts/: make_fixtures.sh
(+25 files in other folders)
